# game-library-service

./: .env  .gitignore  Cargo.toml  README.md  config.toml  config.toml.sample
.github/: dependabot.yml
.github/workflows/: tests.yml
game-library-service/: .env  Cargo.toml  README.md  config.toml.sample
game-library-service/migrations/: 20251101170357_nonempty_gallery_sort_key.sql  20251111002106_projects_tags.sql  20251111205947_projects_tags_history.sql  20251113173311_projects_tags_trigger_fix.sql  20251117144008_consolidated.sql  20251117144009_publishers_table.sql  20251117224908_reset_fts5.sql  20251117235039_publishers_unique.sql  20251117235911_publishers_ref.sql  20251118003726_consolidated.sql
game-library-service/scripts/: merge_publisher.sh  merge_user.sh  rename_project.sh  rename_publisher.sh
game-library-service/src/: app.rs  config.rs  content_type.rs  core.rs  db.rs  errors.rs  extractors.rs  handlers.rs  input.rs  main.rs  model.rs  module.rs  params.rs  prod_core.rs  sqlite.rs  upload.rs  version.rs
game-library-service/src/fixtures/: images.sql  packages.sql  proj_query_window.sql  proj_window.sql  projects.sql  ten_projects.sql  title_window.sql
game-library-service/src/sqlite/: flag.rs  images.rs  packages.rs  players.rs  project.rs  projects.rs  publishers.rs  releases.rs  tags.rs  users.rs
game-library-service/src/sqlite/fixtures/: flags.sql  galleries.sql  images.sql  proj_facet_window.sql  proj_window.sql  tags.sql  title_window.sql
migrations/: 20231005205715_initial.sql  20231023233042_players.sql  20231025205542_project_name.sql  20231028000833_readme.sql  20231029201646_package.sql  20231101200206_project.sql  20231115000951_initial.sql  20250622141515_remove_useless_checks_on_foreign_keys.sql  20250622143125_remove_useless_checks_on_foreign_keys_-_authors.sql  20250622143623_remove_useless_checks_on_foreign_keys_-_players.sql  20250622143750_remove_useless_checks_on_foreign_keys_-_packages.sql  20250622143921_remove_useless_checks_on_foreign_keys_-_releases.sql  20250622160645_remove_useless_checks_on_foreign_keys_-_files.sql  20250622160824_remove_useless_checks_on_foreign_keys_-_images.sql  20250622161051_remove_useless_checks_on_foreign_keys_-_image_revisions.sql  20250622161153_remove_useless_checks_on_foreign_keys_-_galleries.sql  20250622161822_remove_useless_checks_on_foreign_keys_-_tags.sql  20250622162004_remove_useless_checks_on_foreign_keys_-_project_revisions.sql  20250622162231_remove_useless_checks_on_foreign_keys_-_project_data.sql  20250622162407_remove_useless_checks_on_foreign_keys_-_flags.sql  20250622223147_create_package_history_table.sql  20250622225331_initial.sql  20250624215738_packages_history_key.sql  20250625210234_create_releases_history_table.sql  20250625210911_releases_history_key.sql  20250628132548_package_sort_key.sql  20250628151701_package_sort_key.sql  20250702220821_consolidated.sql  20250706151356_nonunique-packages-history.sql  20250711204640_projects-history.sql  20250712000744_consolidated.sql  20250725121928_package-slugs.sql  20250725154748_package-revisions-slugs.sql  20250726154326_project-slugs.sql  20250726160850_project-slugs.sql  20250726223240_consolidated.sql  20250922213502_image-mime-type.sql  20250922220539_file-mime-type.sql  20250929190534_flag-close.sql  20250929193930_flag-close-check.sql  (+15 more)
scripts/: conv_galleries.py  delete_project.sh  id_to_seq.py  merge_user.sh  proj_norm.py  proj_slug.py  rename_publisher.sh
src/: app.rs  config.rs  content_type.rs  core.rs  datastore.rs  db.rs  errors.rs  extractors.rs  handlers.rs  image.rs  input.rs  jwt.rs  main.rs  model.rs  module.rs  objstore.rs  pagination.rs  params.rs  prod_core.rs  queries.rs  sql.rs  sqlite.rs  time.rs  upload.rs  version.rs
src/fixtures/: authors.sql  init.sql  one_owner.sql  owner.sql  packages.sql  players.sql  proj_query_window.sql  proj_window.sql  projects.sql  readme.sql  readmes.sql  ten_projects.sql  title_window.sql  two_owners.sql  user.sql  users.sql
src/sqlite/: flag.rs  images.rs  packages.rs  players.rs  project.rs  projects.rs  publishers.rs  releases.rs  tags.rs  users.rs
src/sqlite/fixtures/: flags.sql  galleries.sql  images.sql  one_owner.sql  packages.sql  proj_facet_window.sql  proj_query_window.sql  proj_window.sql  projects.sql  tags.sql  title_window.sql
test/: a.avif  test.vmod
