[package]
name = "gls"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal Game Library Service"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tempfile = "0.7"
async-trait = "0.1"
axum = { version = "0.8", features = ["http1", "http2", "json", "macros", "multipart", "query", "tokio"] }
axum-extra = { version = "0.10", features = ["query", "typed-header"] }
chrono = "0.4"
const_format = "0.2.34"
futures = "0.3"
futures-util = "0.3"
http = "1.3"
http-body-util = "0.1"
infer = "0.19"
itertools = "0.14"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
mime = "0.3"
once_cell = "1"
regex = "1"
rust-s3 = "0.37"
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.5", features = ["buffer", "limit", "util"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "cors", "fs", "timeout", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-panic = { version = "0.1", features = ["capture-backtrace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-ccc = "0.4"
unicode-normalization = "0.1"
unicode-properties = "0.1"
urlencoding = "2.1.3"
zip = "5"

[dev-dependencies]
nix = { version = "0.30", features = ["signal"] }
serde_html_form = "*"
serde_json = "1"
