[package]
name = "gls"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal Game Library Service"
license = "GPL-3.0-or-later"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tempfile = "0.8"
async-trait = "0.1"
axum = { version = "0.8", features = ["http1", "http2", "json", "macros", "multipart", "query", "tokio"] }
axum-extra = { version = "0.12", features = ["query", "typed-header"] }
chrono = "0.4"
const_format = "0.2.34"
futures = "0.3"
futures-util = "0.3"
#glc = { path = "../game-library-common" }
glc = { git = "https://github.com/vassalengine/game-library-common.git" }
hex = "0.4"
http = "1.3"
http-body-util = "0.1"
infer = "0.19"
itertools = "0.15"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
mime = "0.3"
num-bigint = "0.5.0"
regex = "1"
rust-s3 = "0.37"
semver = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "1.0"
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.7", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "cors", "fs", "timeout", "trace"] }
tracing = "0.1"
unicode-ccc = "0.4"
unicode-normalization = "0.1"
unicode-properties = "0.1"
urlencoding = "2.1.3"
zip = "8"

[dev-dependencies]
rand = "0.10"
serde_html_form = "*"
serde_json = "1"
